# awake

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md
.beads/: issues.jsonl
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
resources/: AppIcon.icns
scripts/: Info.plist  entitlements.plist  sign.sh
src/: main.rs
