[package]
name = "awake"
version = "0.1.0"
edition = "2021"
description = "A macOS menu bar app to prevent system sleep"
authors = ["Your Name"]
license = "MIT"

[dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSControl", "NSButton", "NSCell", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
core-foundation = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
